Blocklist supports children types. Add UseKeyForChildren config toggle.

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,7 +1,9 @@
 {
-  "gmcm.AnimalThrowKey.name": "AnimalThrowKey",
-  "gmcm.AnimalThrowKey.tooltip": "Hold this key when interacting with a farm animal to toss it instead of opening the animal query menu.",
-  "gmcm.AnimalBlocklist.name": "AnimalBlocklist",
-  "gmcm.AnimalBlocklist.tooltip": "Specify animal types (e.g. 'White Cow'), comma-separated, to prevent being able to toss animals of those types.",
+  "gmcm.ThrowKey.name": "ThrowKey",
+  "gmcm.ThrowKey.tooltip": "Hold this key when interacting with a farm animal to toss it instead of opening the animal query menu.",
+  "gmcm.UseKeyForChildren.name": "UseKeyForChildren",
+  "gmcm.UseKeyForChildren.tooltip": "Require use of the ThrowKey to throw children, instead of automatically proceeding.",
+  "gmcm.Blocklist.name": "Blocklist",
+  "gmcm.Blocklist.tooltip": "Specify animal types (e.g. 'White Cow'), or child types ('Crawler' or 'Toddler'), comma-separated, to prevent being able to toss loved ones of those types.",
   "EOF": ""
 }
